# arch-linux-legion-dotfiles

./: .bash_aliases  .bash_env  .bash_functions  .bash_profile  .bashrc  .gitignore
.local/share/icons/: Bibata-Modern-Amber  Bibata-Modern-Classic  Bibata-Modern-Ice  Bibata-Original-Amber  Nordzy-cursors  Simp1e-Solarized-Dark  catppuccin-mocha-mauve-cursors
.packages/: aurlist.txt  pkglist.txt
.scripts/: install.sh  update-packages.sh
alacritty/.config/alacritty/: alacritty.toml  alacritty.toml.bak  alacritty.yml  theme.yml
apps-list/.config/: apps.list
background/.config/background/: bg-next.conf  bg-prev.conf  bg-set.conf  slideshow.conf
bash-files/: .bash_aliases  .bash_env  .bash_functions  .bash_login  .bash_profile  .bashrc
btop/.config/btop/: btop.conf
builds/dashboard/: CMakeLists.txt  Makefile  README.md  nohup.out
builds/dashboard/qml/: CalendarView.qml  Main.qml  MediaView.qml  ProfileCard.qml  StatsCard.qml  TimeCard.qml  WeatherView.qml  qmldir
builds/dashboard/src/: appconfig.cpp  appconfig.h  configfiles.cpp  configfiles.h  main.cpp  mediainfo.cpp  mediainfo.h  systeminfo.cpp  systeminfo.h  weatherconfig.cpp  weatherconfig.h
builds/hellpaper/: Makefile  config.c  effects.c  hellpaper  hellpaper.h  main.c  scene.c  shaders.c  state.c  utils.c  wallpapers.c
builds/livepaper/: CMakeLists.txt  Makefile  README.md  livepaper  main.c  sway_window.c  sway_window.h
builds/livepaper/qml/: Main.qml
builds/livepaper/src/: livepapercontroller.cpp  livepapercontroller.h  main.cpp  wallpapermodel.cpp  wallpapermodel.h
chromack/.config/chromack/: colors.css  config.toml  material.css  style.css
dashboard/.config/dashboard/: config.json  style.qml  tasks.json  theme.qml  weather.json
eza/.config/eza/: theme.yml.bak
starship/.config/: starship.toml
zsh-files/: .zprofile  .zshrc
(+594 files in other folders)
